# Smart-Shelf-CV

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  app.py  data.yaml  docker-compose.yml  out.txt  render.yaml  smart_shelf_cv_label_tracker.xlsx  smart_shelf_cv_planogram_check.ipynb  smart_shelf_cv_tracker_1.xlsx  smart_shelf_cv_train_yolov8.ipynb  smart_shelf_cv_workflow.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: planogram.py  shelf.py
backend/app/core/: config.py
backend/app/data/: planogram.json
backend/app/data/planograms/: beverage.json  coffee-v2.json  coffee.json  cooler-mini.json  cooler.json
backend/app/schemas/: detection.py  planogram.py  shelf.py
backend/app/services/: demo.py  detector.py  matcher.py  planogram_store.py
backend/tests/: test_smoke.py
design/: Smart Shelf Dashboard.dc.html  support.js
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
test/labels/: test_1737_jpg.rf.T11al5wjNhS1QGrUO5FX.txt  train_2027_jpg.rf.fM8aH6GRYOZkpkjSl88W.txt  train_4822_jpg.rf.Lw2VJBumt3YC33YfeTh7.txt
train/labels/: test_2449_jpg.rf.Xg22HmYgyWhws35KVpQ7.txt  test_431_jpg.rf.kMrSi9jsbEzrS9oJxG1k.txt  test_488_jpg.rf.FivFBSXFXLRMNw867wdL.txt  train_2183_jpg.rf.SHm79HZcpfVVLFGp9m2G.txt  train_2713_jpg.rf.uDnoyam2WfvqqFwZODhq.txt  train_2851_jpg.rf.XULpA4fBrCewHne4STLY.txt  train_3372_jpg.rf.LMXcdu52bV7ofUbJYePj.txt  (+19 more)
(+21 files in other folders)
