[project]
name = "smart-shelf-backend"
version = "0.1.0"
description = "Smart Shelf CV — planogram compliance API (FastAPI)"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
